Adds support to Carthage.

--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,16 @@ tags
 
 
 # End of https://www.gitignore.io/api/macos,vim,swift,objective-c,c
+
+# Created by https://www.gitignore.io/api/carthage
+
+### Carthage ###
+# Carthage
+#
+# Add this line if you want to avoid checking in source code from Carthage dependencies.
+# Carthage/Checkouts
+
+Carthage/Build
+
+
+# End of https://www.gitignore.io/api/carthage
