--- a/XCTSwiftComplementary.xcodeproj/xcshareddata/xcschemes/XCTestSophie-iOS.xcscheme
+++ b/XCTSwiftComplementary.xcodeproj/xcshareddata/xcschemes/XCTestSophie-iOS.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "9CD2D80321772DDC00FFD1A9"
+               BlueprintIdentifier = "9CD2D7E721772DD100FFD1A9"
                BuildableName = "XCTestSophie.framework"
-               BlueprintName = "XCTestSophie-tvOS"
-               ReferencedContainer = "container:XCTestSophie.xcodeproj">
+               BlueprintName = "XCTSwiftComplementary-iOS"
+               ReferencedContainer = "container:XCTSwiftComplementary.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,20 +32,20 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "9CD2D80B21772DDC00FFD1A9"
-               BuildableName = "XCTestSophie-tvOSTests.xctest"
-               BlueprintName = "XCTestSophie-tvOSTests"
-               ReferencedContainer = "container:XCTestSophie.xcodeproj">
+               BlueprintIdentifier = "9CD2D7EF21772DD100FFD1A9"
+               BuildableName = "XCTSwiftComplementary-iOSTests.xctest"
+               BlueprintName = "XCTSwiftComplementary-iOSTests"
+               ReferencedContainer = "container:XCTSwiftComplementary.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "9CD2D80321772DDC00FFD1A9"
+            BlueprintIdentifier = "9CD2D7E721772DD100FFD1A9"
             BuildableName = "XCTestSophie.framework"
-            BlueprintName = "XCTestSophie-tvOS"
-            ReferencedContainer = "container:XCTestSophie.xcodeproj">
+            BlueprintName = "XCTSwiftComplementary-iOS"
+            ReferencedContainer = "container:XCTSwiftComplementary.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -64,10 +64,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "9CD2D80321772DDC00FFD1A9"
+            BlueprintIdentifier = "9CD2D7E721772DD100FFD1A9"
             BuildableName = "XCTestSophie.framework"
-            BlueprintName = "XCTestSophie-tvOS"
-            ReferencedContainer = "container:XCTestSophie.xcodeproj">
+            BlueprintName = "XCTSwiftComplementary-iOS"
+            ReferencedContainer = "container:XCTSwiftComplementary.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -82,10 +82,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "9CD2D80321772DDC00FFD1A9"
+            BlueprintIdentifier = "9CD2D7E721772DD100FFD1A9"
             BuildableName = "XCTestSophie.framework"
-            BlueprintName = "XCTestSophie-tvOS"
-            ReferencedContainer = "container:XCTestSophie.xcodeproj">
+            BlueprintName = "XCTSwiftComplementary-iOS"
+            ReferencedContainer = "container:XCTSwiftComplementary.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
