--- a/XCTSwiftComplementary.xcodeproj/xcshareddata/xcschemes/XCTestSophie-tvOS.xcscheme
+++ b/XCTSwiftComplementary.xcodeproj/xcshareddata/xcschemes/XCTestSophie-tvOS.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "9CD2D7CA21772DB700FFD1A9"
+               BlueprintIdentifier = "9CD2D80321772DDC00FFD1A9"
                BuildableName = "XCTestSophie.framework"
-               BlueprintName = "XCTestSophie-macOS"
-               ReferencedContainer = "container:XCTestSophie.xcodeproj">
+               BlueprintName = "XCTSwiftComplementary-tvOS"
+               ReferencedContainer = "container:XCTSwiftComplementary.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,20 +32,20 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "9CD2D7D321772DB700FFD1A9"
-               BuildableName = "XCTestSophie-macOSTests.xctest"
-               BlueprintName = "XCTestSophie-macOSTests"
-               ReferencedContainer = "container:XCTestSophie.xcodeproj">
+               BlueprintIdentifier = "9CD2D80B21772DDC00FFD1A9"
+               BuildableName = "XCTSwiftComplementary-tvOSTests.xctest"
+               BlueprintName = "XCTSwiftComplementary-tvOSTests"
+               ReferencedContainer = "container:XCTSwiftComplementary.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "9CD2D7CA21772DB700FFD1A9"
+            BlueprintIdentifier = "9CD2D80321772DDC00FFD1A9"
             BuildableName = "XCTestSophie.framework"
-            BlueprintName = "XCTestSophie-macOS"
-            ReferencedContainer = "container:XCTestSophie.xcodeproj">
+            BlueprintName = "XCTSwiftComplementary-tvOS"
+            ReferencedContainer = "container:XCTSwiftComplementary.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -64,10 +64,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "9CD2D7CA21772DB700FFD1A9"
+            BlueprintIdentifier = "9CD2D80321772DDC00FFD1A9"
             BuildableName = "XCTestSophie.framework"
-            BlueprintName = "XCTestSophie-macOS"
-            ReferencedContainer = "container:XCTestSophie.xcodeproj">
+            BlueprintName = "XCTSwiftComplementary-tvOS"
+            ReferencedContainer = "container:XCTSwiftComplementary.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -82,10 +82,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "9CD2D7CA21772DB700FFD1A9"
+            BlueprintIdentifier = "9CD2D80321772DDC00FFD1A9"
             BuildableName = "XCTestSophie.framework"
-            BlueprintName = "XCTestSophie-macOS"
-            ReferencedContainer = "container:XCTestSophie.xcodeproj">
+            BlueprintName = "XCTSwiftComplementary-tvOS"
+            ReferencedContainer = "container:XCTSwiftComplementary.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
